<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.CatalogFragment"
    android:layout_gravity="top">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zona">

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/label_zona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/zona"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/list_zona"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/zona_array" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/megazona">


        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/textViewPriorities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/megazona"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/my_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/zona_array" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sector">

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/textViewPriorities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sector"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/my_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/zona_array" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/piscina">

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/textViewPriorities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/piscina"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/my_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/zona_array" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>